# dexiask

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
backend/cmd/server/: fx_modules.go  main.go
backend/internal/agent/: protocol.go  protocol_test.go  registry.go  run_manager.go  run_manager_test.go  runner_http.go  runner_http_test.go  runtime.go
backend/internal/auth/: auth_test.go  context.go  crypto.go  github.go  headers_test.go  middleware.go  (+3 more)
engine/: .env.example  .gitignore  Dockerfile  PROTOCOL.md  README.md  pyproject.toml
engine/claude_engine/: __init__.py  __main__.py  runtime.py  sdk_adapters.py
engine/claude_engine/core/: __init__.py  sdk_mapping.py
engine/claude_engine/models/: __init__.py  settings.py
engine/claude_engine/server/: __init__.py  app.py
engine/engine_core/: __init__.py  app.py  local_runtime.py  runner.py  runtime.py
engine/engine_core/capabilities/: __init__.py  interactive.py  mcp_router.py  workspace.py
engine/engine_core/models/: __init__.py  events.py  job.py  settings.py
engine/engine_core/observability/: __init__.py
engine/engine_core/skills/: __init__.py  loader.py
engine/engine_core/tools/: __init__.py  descriptors.py
engine/tests/capabilities/: test_interactive.py  test_mcp_router.py  test_workspace.py
engine/tests/claude/: test_runtime.py  test_sdk_adapters.py  test_sdk_mapping.py  test_settings.py
engine/tests/core/: test_local_runtime.py  test_runner.py
engine/tests/models/: test_events.py  test_job.py
engine/tests/server/: test_app.py
engine/tests/skills/: test_loader.py
indexer/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  repos.yaml
indexer/indexer/: __init__.py  __main__.py  access.py  app.py  context.py  github.py  observability.py  paths.py  registry_store.py  service.py  settings.py
indexer/indexer/chunking/: __init__.py  chunker.py  languages.py
indexer/indexer/config/: __init__.py  models.py  registry.py
indexer/indexer/docs/: __init__.py  digest.py  domain.py  overview.py  skeleton.py  store.py
indexer/indexer/docs/prompts/: __init__.py  domain_docs.md  overview.md
indexer/indexer/embedding/: __init__.py  _batching.py  base.py  factory.py  hashprovider.py  ollama.py  openai.py  voyage.py
indexer/indexer/git/: __init__.py  mirror.py  repo.py
indexer/indexer/lock/: __init__.py
indexer/indexer/mcp/: __init__.py  formatting.py  server.py  tools.py
indexer/indexer/pipeline/: __init__.py  indexer.py  progress.py  state.py
indexer/indexer/scheduler/: __init__.py  cron.py
indexer/indexer/store/: __init__.py  qdrant.py  schema.py
indexer/tests/: conftest.py  fakes.py  test_access.py  test_app.py  test_chunker.py  test_config.py  test_docs.py  test_domain_docs.py  test_embedding.py  test_formatting.py  test_git_repo.py  test_mirror.py  test_paths.py  test_pipeline.py  test_progress.py  test_registry_store.py  test_service.py  test_store.py  test_tools.py
memory/: Dockerfile  Makefile  README.md  go.mod  go.sum
ollama/: Dockerfile  entrypoint.sh
sample-workspace/: README.md
skills/: README.md
skills/code-explain/: SKILL.md
skills/diagrams/: SKILL.md
skills/helpful/: SKILL.md
skills/memory/: SKILL.md
skills/voice/: SKILL.md
web/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/src/: instrumentation.ts  middleware.ts
(+180 files in other folders)
