[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dexiask-engine"
version = "1.0.0"
description = "Dexiask engine — always-on Agent Job Protocol HTTP service running the Claude Agent SDK (ask mode)"
requires-python = ">=3.12"
dependencies = [
    # HTTP server.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # Typed config and models.
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # MCP client (deferred-server tool-search router).
    "mcp>=1.0",
    # Claude Agent SDK (bundles the Node Claude Code CLI).
    "claude-agent-sdk>=0.2",
    # Observability — OpenTelemetry traces/metrics/logs over OTLP/HTTP.
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # FastAPI TestClient async support
    "ruff>=0.5",
]

[project.scripts]
dexiask-engine = "claude_engine.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine_core*", "claude_engine*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
    "E501",   # line length (handled by formatter)
    "UP042",  # str+Enum (intentional: wire-serialized string enums)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["engine_core", "claude_engine"]
omit = [
    "*/__main__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]
show_missing = true
